@@ -1,3 +1,9 @@
+04/08/2011 Changes
+
+Added start of stout - the Redline simple web tool - started by Pat Maddox and myself at
+ESUG Las Vegas 2011.
+
+
 03/08/2011 Changes
 
 Added placeholder/start of Smalltalk Runtime.
